[package]
name = "instrument"
version = "0.1.0"
authors = ["mitchmindtree <mitchell.nordine@gmail.com>"]

[dependencies]
pitch_calc = "0.11.0"
rand = "0.3.4"
time_calc = "0.11.0"
serde = { optional = true, version = "0.7.0" }
serde_json = { optional = true, version = "0.7.0" }

[features]
serde_serialization = [
    "serde",
    "serde_json",
    "pitch_calc/serde_serialization",
    "time_calc/serde_serialization",
]
